# pareto-matching

./: README.md  pyproject.toml
examples/: basic_usage.py
pareto_matching/: __init__.py  matching.py
tests/: __init__.py  test_matching.py  test_verification.py
